# rust-web

./: Cargo.toml
.github/workflows/: build.yaml
backend/: .env  Cargo.toml
backend/.sqlx/: query-15478d3e2f28e6059af3a8561b3c3d451f0cc97d2d0a493ee82219e517d34157.json  query-42c1d5a962023a84e1fc1f85cd57f0046ccf4551e619beb6ae716f9cb430c9ea.json
backend/src/: main.rs
backend/src/common/: error.rs  mod.rs  server.rs  state.rs
backend/src/controllers/: index.rs  users.rs
backend/src/test/: index_test.rs  mod.rs  users_test.rs
