[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version ="1.12.0", features=["attributes","unstable"]}
chrono = "0.4.31"
dotenv = "0.15.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
serde = {version = "1.0.195", features =["derive"]}
serde_json = "1.0.111"
sqlx = { version = "0.7.3" , features=["runtime-async-std","postgres","uuid","chrono"]}
tide = "0.16.0"
uuid = "1.7.0"
